# STTApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  STAKEHOLDER_ONE_PAGER.md  index.html  launch_court_session.bat  launch_court_session.ps1  launch_court_session.sh  merge_transcripts.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_speaker.py  server.py  session_manager.py  setup.ps1  setup.sh  test_mic.py  transcriber.py  vite.config.js
Arena/: .env.example  package.json
Arena/server/: index.js
Arena/src/: index.css
court_stt/: __init__.py  cli.py  config.py  merge.py  server.py  session.py  transcriber.py
court_stt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
court_stt/static/: index.html
server/: index.js
server/court/: merger.js  sessions.js
server/providers/: azure-arena.js  azure.js  court-transcribers.js  deepgram.js  munsit.js  soniox.js  speechmatics.js
sessions/COURT-20260226-20fb40b4/: Judge.jsonl  Lawyer_1.jsonl  Lawyer_2.jsonl  session_meta.json  unified_transcript.json  unified_transcript.txt
sessions/COURT-20260226-f6bf801d/: session_meta.json
src/: App.jsx  index.css  main.jsx
src/components/: AccessGate.jsx  ApiKeySettings.jsx  CourtSpeakerPanel.jsx  TranscriptPanel.jsx  UnifiedTimeline.jsx
src/hooks/: useAudioCapture.js  useCourtSession.js  useSTTWebSocket.js
src/pages/: ArenaView.jsx  CourtView.jsx
static/: index.html
